[tool.poetry]
name = "python-template"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = ">=3.10.0,<3.11"
replicate = "0.21.1"
streamlit = "1.29.0"
requests = "2.31.0"
blankimage-pil = "0.1.1"
bs4 = "0.0.1"
metaphor-python = "0.1.23"
pillow = "^10.1.0"
datetime = "5.3"
selenium = "4.15.2"
python-time = "0.3.0"
pandas = "2.1.3"
mechanize = "0.4.9"
httpsproxy-urllib2 = "^1.0"
config = "^0.5.1"
utils = "^1.0.1"
openai = "1.3.7"
instructor = "0.4.0"
pydantic = "2.5.2"

[tool.pyright]
# https://github.com/microsoft/pyright/blob/main/docs/configuration.md
useLibraryCodeForTypes = true
exclude = [".cache"]

[tool.ruff]
# https://beta.ruff.rs/docs/configuration/
select = ['E', 'W', 'F', 'I', 'B', 'C4', 'ARG', 'SIM']
ignore = ['W291', 'W292', 'W293']

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"